--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,9 @@
     <div id="box3">BOX 3</div>
     <div id="box4">BOX4</div>
     <div id="box5">BOX5</div>
+    <div id="box6">BOX6</div>
 
     <script src=""></script>
 </body>
+
 </html>
