--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+   <h1>BIG BOXES</h1>
     <div id="box1">BOX 1</div>
     <div id="box2">BOX 2</div>
     <div id="box3">BOX 3</div>
     <div id="box4">BOX4</div>
     <div id="box5">BOX5</div>
     <div id="box6">BOX6</div>
+    <div id="box7">BOX7</div>
 
     <script src=""></script>
 </body>
